[tool.poetry]
name = "picpays"
version = "0.1.0"
description = ""
authors = ["ferrer <ferrer.morgado@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"
requests = "^2.32.3"
types-requests = "^2.32.0.20241016"
rq = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
taskipy = "^1.14.0"
ruff = "^0.7.4"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'fastapi dev picpays/server.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=picpays -vv'
post_test = 'coverage html'
queue = 'rq worker task_queue --with-scheduler'



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
